added dotenv and basic controller

--- a/Studio.csproj
+++ b/Studio.csproj
@@ -133,6 +133,7 @@
 
     <ItemGroup>
       <ProjectReference Include="Studio.Foundation\Studio.Foundation\Studio.Foundation.csproj" />
+      <ProjectReference Include="Studio.Http\Studio.Http.csproj" />
       <ProjectReference Include="Studio.Support\Studio.Support.csproj" />
     </ItemGroup>
 
