outsourced classes into other projects

--- a/Studio.Foundation/Studio.Foundation/Studio.Foundation.csproj
+++ b/Studio.Foundation/Studio.Foundation/Studio.Foundation.csproj
@@ -12,4 +12,9 @@
       </Reference>
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\..\Studio.Http\Studio.Http.csproj" />
+      <ProjectReference Include="..\..\Studio.Support\Studio.Support.csproj" />
+    </ItemGroup>
+
 </Project>
