architecture and working routes decoupled from app

--- a/Studio.Foundation/Studio.Foundation/Studio.Foundation.csproj
+++ b/Studio.Foundation/Studio.Foundation/Studio.Foundation.csproj
@@ -13,6 +13,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\..\Studio.Exceptions\Studio.Exceptions.csproj" />
       <ProjectReference Include="..\..\Studio.Http\Studio.Http.csproj" />
       <ProjectReference Include="..\..\Studio.Support\Studio.Support.csproj" />
     </ItemGroup>
